Modify html templates

--- a/templates/sightings/add.html
+++ b/templates/sightings/add.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
+<head><h3>Add New Squirrel Information</h3></head>
 <body>
+
 	<form method = "post">
 	{% csrf_token %}
 	
