--- a/templates/sightings/stats.html
+++ b/templates/sightings/stats.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><h2>Squirrel Statistics</h2>
   </head>
   <body>
 	<p>Squirrel Count: {{squirrel_count}}</p>
