Modify html template

--- a/templates/homepage/homepage.html
+++ b/templates/homepage/homepage.html
@@ -3,8 +3,15 @@
   <head>
   <h1> Squirrel Homepage</h1>
   </head>
+  <br>
   <body>
-
+  	<a href="/map">map</a>
+  	<br>
+  	<a href="/sightings">sightings</a>
+  	<br>
+  		--<a href="/sightings/add">add</a>
+  		<br>
+  		--<a href="/sightings/stats">statistics</a>
 	<br>
 	<br>
 	<img src="https://s3-us-west-1.amazonaws.com/k1w1-aha-blog/uploads-v2/2018/04/office-squirrel.jpg" alt="Cute Squirrel">
